--- a/src/main/webapp/public/views/apps.html
+++ b/src/main/webapp/public/views/apps.html
@@ -1,17 +1,15 @@
 <div class="container" style="margin-bottom: 20px;">
 	<div class="row">
 		<div class="span12">
-			<h2 style="display: inline-block;">{{ application.name }}
-			<small>{{ application.url }}</small>
-			</h2>
+			<h2 style="display: inline-block;">{{ instance.name }}</h2>
 		</div>
 	</div>
 	<div class="row">		
 		<div class="span12 btn-group text-center">
-			<a class="btn" ng-class="{active: $state.includes('apps.details')}" ui-sref="apps.details.metrics({id: application.id})">Details</a>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.logging({id: application.id})" >Logging</a></label>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.jmx({id: application.id})">JMX</a></label>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.threads({id: application.id})">Threads</a></label>		
+			<a class="btn" ng-class="{active: $state.includes('apps.details')}" ui-sref="apps.details.metrics({id: instance.id})">Details</a>
+			<a class="btn" ui-sref-active="active" ui-sref="apps.logging({id: instance.id})" >Logging</a></label>
+			<a class="btn" ui-sref-active="active" ui-sref="apps.jmx({id: instance.id})">JMX</a></label>
+			<a class="btn" ui-sref-active="active" ui-sref="apps.threads({id: instance.id})">Threads</a></label>
 		</div>
 	</div>
 </div>
