--- a/src/main/webapp/public/views/about.html
+++ b/src/main/webapp/public/views/about.html
@@ -1,7 +1,5 @@
 <div class="container">
   <div class="main-template">
-    This is an administration GUI for Spring-Boot applications. All applications has to register itself at this application. 
-    This is done by including <a href="">spring-boot-starters-admin-client</a> as dependency. This will 
-    auto-configure a registrator that registers the application.  
+    This is an administration GUI for Spring Cloud applications. All applications has to register to the service registry (eg: Eureka).
   </div>
 </div>
