--- a/src/main/webapp/public/views/overview.html
+++ b/src/main/webapp/public/views/overview.html
@@ -11,34 +11,35 @@
                 <span class="badge badge-{{app.badge}}">{{ app.instanceUp }} / {{ app.instanceCount }}</span>
 			</accordion-heading>
 
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Instance</th>
-                            <th>Version</th>
-                            <th>Info</th>
-                            <th colspan="2">Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="application in app.instances track by application.id">
-                            <td>{{ application.name }}<br/><span class="muted">{{ application.url }}</span></td>
-                            <td>{{ application.version }}</td>
-                            <td><span ng-repeat="(name, value) in application.info track by name">{{name}}: {{value}}<br></span></td>
-                            <td><span class="status-{{application.status}}">{{ application.status }}</span>
-                            <span ng-show="application.refreshing" class="refresh"></span></td>
-                            <td>
-                                <div class="btn-group pull-right" ng-hide="application.status == null || application.status == 'DOWN' || application.status == 'OUT_OF_SERVICE'">
-                                    <a ng-disabled="!application.providesLogfile" target="_self" class="btn btn-success" ng-href="{{application.providesLogfile ? application.url + '/logfile' :''}}"><i class="icon-file icon-white"></i>Log</a>
-                                    <a ui-sref="apps.details.metrics({id: application.id})" class="btn btn-success">Details</a>
-                                    <a ui-sref="apps.logging({id: application.id})" class="btn btn-success">Logging</a>
-                                    <a ui-sref="apps.jmx({id: application.id})" class="btn btn-success">JMX</a>
-                                    <a ui-sref="apps.threads({id: application.id})" class="btn btn-success">Threads</a>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Instance</th>
+                        <th>Version</th>
+                        <th>Info</th>
+                        <th>Status</th>
+                        <th colspan="2">Health</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="application in app.instances track by application.id">
+                        <td>{{ application.name }}<br/><span class="muted">{{ application.url }}</span></td>
+                        <td>{{ application.version }}</td>
+                        <td><span ng-repeat="(name, value) in application.info track by name">{{name}}: {{value}}<br></span></td>
+                        <td><span class="status-{{application.status}}">{{ application.status }}</span>
+                        <span ng-show="application.refreshing" class="refresh"></span></td>
+                        <td><span class="status-{{application.health}}">{{ application.health }}</span></td>
+                        <td>
+                            <div class="btn-group pull-right" ng-hide="application.status == null || application.status == 'DOWN' || application.status == 'OUT_OF_SERVICE' || application.health == 'OFFLINE'">
+                                <a ui-sref="apps.details.metrics({id: application.id})" class="btn btn-success">Details</a>
+                                <a ui-sref="apps.logging({id: application.id})" class="btn btn-success">Logging</a>
+                                <a ui-sref="apps.jmx({id: application.id})" class="btn btn-success">JMX</a>
+                                <a ui-sref="apps.threads({id: application.id})" class="btn btn-success">Threads</a>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-            </accordion-group>
-    </accordion>
+        </accordion-group>
+</accordion>
