Initiate circuit breaker dashboard

--- a/src/main/webapp/public/views/apps/history.html
+++ b/src/main/webapp/public/views/apps/history.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-bottom: 20px;">
     <div class="row">
         <div class="span12">
-            <h2 style="display: inline-block;">{{ instance.name }}</h2>
+            <h2 style="display: inline-block;">Service registry history</h2>
         </div>
     </div>
     <div class="row">
