--- a/src/main/webapp/public/views/apps.html
+++ b/src/main/webapp/public/views/apps.html
@@ -1,15 +1,17 @@
 <div class="container" style="margin-bottom: 20px;">
 	<div class="row">
-		<div class="span12">
-			<h2 style="display: inline-block;">{{ instance.name }}</h2>
+		<div class="col-md-12">
+			<h2 style="display: inline-block;">{{ instance.name }}
+				<small>{{ instance.url }}</small>
+			</h2>
 		</div>
 	</div>
-	<div class="row">		
-		<div class="span12 btn-group text-center">
-			<a class="btn" ng-class="{active: $state.includes('apps.details')}" ui-sref="apps.details.metrics({id: instance.id})">Details</a>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.logging({id: instance.id})" >Logging</a></label>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.jmx({id: instance.id})">JMX</a></label>
-			<a class="btn" ui-sref-active="active" ui-sref="apps.threads({id: instance.id})">Threads</a></label>
+	<div class="row text-center">
+		<div class="btn-group">
+			<a class="btn btn-default" ng-class="{active: $state.includes('apps.details')}" ui-sref="apps.details.metrics({id: instance.id})">Details</a>
+			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.logging({id: instance.id})" >Logging</a></label>
+			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.jmx({id: instance.id})">JMX</a></label>
+			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.threads({id: instance.id})">Threads</a></label>
 		</div>
 	</div>
 </div>
