--- a/src/main/webapp/public/views/apps/details.html
+++ b/src/main/webapp/public/views/apps/details.html
@@ -1,9 +1,9 @@
-<div class="alert alert-error" ng-if="error">
+<div class="alert alert-danger" ng-if="error">
 	<b>Error:</b> {{ error }}
 </div>
 
-<div class="container-fluid" style="margin: 0 auto; width: 960px;">
-	<div class="span6">
+<div class="container">
+	<div class="col-md-6">
 	    <table class="table">
 	     <thead><tr><th>Application</th><th><small class="pull-right"><a href="{{ instance.url }}/info">raw JSON</a></small></th></tr></thead>
 	    <tbody>
@@ -14,7 +14,7 @@
 	   </table>
 	</div>
 	
-	 <div class="span6">
+	 <div class="col-md-6">
 		<table class="table">
 			<thead>
 				<tr><th>Health Checks</th><th><small class="pull-right"><a href="{{ instance.url }}/health">raw JSON</a></small></th></tr>
@@ -30,14 +30,14 @@
 						{{health.db.database}}
 					</td>
 				</tr>
-				<tr ng-if="health.db.error" colspan="2" class="alert alert-error" >{{ health.db.error }}</td></tr>
+				<tr ng-if="health.db.error" colspan="2" class="alert alert-danger" >{{ health.db.error }}</td></tr>
 		
 				<tr ng-repeat-start="(dbname, db) in health.db" ng-if="dbname != 'status' && dbname != 'error' && dbname != 'database' && dbname != 'hello'" >
 					<td>{{ dbname | capitalize }} Datasource</td><td><span class="status-{{db.status}}">{{ db.status }}</span><br>
 						{{db.database}}
 					</td>
 				</tr>
-				<tr ng-repeat-end ng-if="db.error"><td colspan="2" class="alert alert-error" >{{ db.error }}</td></tr>
+				<tr ng-repeat-end ng-if="db.error"><td colspan="2" class="alert alert-danger" >{{ db.error }}</td></tr>
 				<tr ng-if="health.diskSpace">
 					<td>Diskspace</td><td><span class="status-{{health.diskSpace.status}}">{{ health.diskSpace.status }}</span><br>
 						{{ health.diskSpace.free / 1024 / 1024 | number:0 }}M free / {{ health.diskSpace.threshold / 1024 / 1024 | number:0 }}M threshold
@@ -48,7 +48,7 @@
 	</div>
 	
 	
-	<div class="span6">
+	<div class="col-md-6">
 	  <table class="table">
 	    <thead><tr><th colspan="2">Memory</th></tr></thead>
 	    <tbody>
@@ -56,8 +56,8 @@
 	        <td colspan="2">
 	          <span>Total Memory ({{ metrics['mem.used'] / 1024 | number:2 }}M / {{ metrics['mem'] / 1024 | number:2 }}M)</span>
 	          <div class="progress" style="margin-bottom: 0px;">
-	            <div class="bar" style="width:{{ memPercentage = (metrics['mem.used'] / metrics['mem'] * 100 | number:0) }}%;"
-	               ng-class="{'bar-success': memPercentage < 75, 'bar-warning': memPercentage >= 75 && memPercentage < 95, 'bar-danger': memPercentage >= 95}">
+	            <div class="progress-bar" style="width:{{ memPercentage = (metrics['mem.used'] / metrics['mem'] * 100 | number:0) }}%;"
+	               ng-class="{'progress-bar-success': memPercentage < 75, 'progress-bar-warning': memPercentage >= 75 && memPercentage < 95, 'progress-bar-danger': memPercentage >= 95}">
 	              {{memPercentage}}%
 	            </div>
 	          </div>
@@ -67,8 +67,8 @@
 	        <td colspan="2">
 	          <span>Heap Memory ({{ metrics['heap.used'] / 1024 | number:2 }}M / {{ metrics['heap.committed'] / 1024 | number:2 }}M)</span>
 	          <div class="progress" style="margin-bottom: 0px;">
-	            <div class="bar" style="width:{{ heapPercentage = (metrics['heap.used'] / metrics['heap.committed'] * 100 | number:0) }}%;"
-	               ng-class="{'bar-success': heapPercentage < 75, 'bar-warning': heapPercentage >= 75 && heapPercentage < 95, 'bar-danger': heapPercentage >= 95}">
+	            <div class="progress-bar" style="width:{{ heapPercentage = (metrics['heap.used'] / metrics['heap.committed'] * 100 | number:0) }}%;"
+	               ng-class="{'progress-bar-success': heapPercentage < 75, 'progress-bar-warning': heapPercentage >= 75 && heapPercentage < 95, 'progress-bar-danger': heapPercentage >= 95}">
 	              {{heapPercentage}}%
 	            </div>
 	          </div>
@@ -85,15 +85,15 @@
 	   </table>
 	</div>
 	
-	<div class="span6">
+	<div class="col-md-6">
 	  <table class="table">
 	    <thead><tr><th>JVM</th><th><small class="pull-right"><a href="{{ instance.url }}/metrics">raw JSON</a></small></th></tr></thead>
 	    <tbody>
 	      <tr ng-if="metrics['systemload.average'] != null && metrics['systemload.average'] >= 0.0">
 	        <td colspan="2">Systemload (last minute average)
 	        	<div class="progress" style="margin-bottom: 0px;">
-	            	<div class="bar" style="width:{{ metrics['systemload.average'] * 100 | number:0 }}%;"
-	               		ng-class="{'bar-success': metrics['systemload.average'] < 0.75, 'bar-warning': metrics['systemload.average'] >= 0.75 && metrics['systemload.average'] < 0.95, 'bar-danger': metrics['systemload.average'] >= 0.95}">
+	            	<div class="progress-bar" style="width:{{ metrics['systemload.average'] * 100 | number:0 }}%;"
+	               		ng-class="{'progress-bar-success': metrics['systemload.average'] < 0.75, 'progress-bar-warning': metrics['systemload.average'] >= 0.75 && metrics['systemload.average'] < 0.95, 'progress-bar-danger': metrics['systemload.average'] >= 0.95}">
 	              		{{metrics['systemload.average'] * 100 | number:0}}%
 	            	</div>
 	          	</div>
@@ -127,7 +127,7 @@
 	  </table>
 	</div>
 	
-	<div class="span6">
+	<div class="col-md-6">
 	  <table class="table">
 	    <thead><tr><th colspan="2">Garbage Collection</th></tr></thead>
 	      <tr ng-repeat-start="(name, value) in gcInfos track by name">
@@ -142,15 +142,15 @@
 	   </table>
 	</div>
 	
-	<div class="span6" ng-show="hasDatasources">
+	<div class="col-md-6" ng-show="hasDatasources">
 	  <table class="table">
 	    <thead><tr><th colspan="2">Datasources</th></tr></thead>
 	      <tr ng-repeat = "(name, value) in datasources track by name">
 	         <td colspan="2">
 	          <span>{{name | capitalize}} Datasource Connections (active: {{ value.active }})</span>
 	          <div class="progress" style="margin-bottom: 0px;">
-	            <div class="bar" style="width:{{ value.usage * 100 | number:0 }}%;"
-	               ng-class="{'bar-success': value.usage < 0.75, 'bar-warning': value.usage >= 0.75 && value.usage < 0.95, 'bar-danger': value.usage >= 0.95}">
+	            <div class="progress-bar" style="width:{{ value.usage * 100 | number:0 }}%;"
+	               ng-class="{'progress-bar-success': value.usage < 0.75, 'progress-bar-warning': value.usage >= 0.75 && value.usage < 0.95, 'progress-bar-danger': value.usage >= 0.95}">
 	              {{value.usage * 100 | number}}%
 	            </div>
 	          </div>
@@ -160,7 +160,7 @@
 	   </table>
 	</div>
 	
-	<div class="span12">
+	<div class="col-md-12">
 	  <div class="main-template">
 	    <div id="xd-jobs" class="tab-pane active col-md-12">
 	      <ul class="nav nav-tabs">
