--- a/src/main/webapp/public/views/apps/history.html
+++ b/src/main/webapp/public/views/apps/history.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-bottom: 20px;">
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <h2 style="display: inline-block;">Service registry history</h2>
         </div>
     </div>
