--- a/src/main/webapp/public/views/circuit-breaker/index.html
+++ b/src/main/webapp/public/views/circuit-breaker/index.html
@@ -1,185 +1,58 @@
+<link rel="stylesheet" type="text/css" href="styles/circuit-breaker.css" />
 
-    <!-- Setup base for everything
-    <link rel="stylesheet" type="text/css" href="css/global.css" />
-                                                                       -->
-    <!-- Our custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/monitor.css" />
+<script type="text/javascript" src="js/jquery.tinysort.min.js"></script>
+<script type="text/javascript" src="js/tmpl.js"></script>
 
+<script type="text/javascript" src="js/circuit-breaker-command.js"></script>
+<script type="text/javascript" src="js/circuit-breaker-threadpool.js"></script>
 
-    <!-- Javascript to monitor and display -->
-    <script type="text/javascript" src="js/jquery.tinysort.min.js"></script>
-    <script type="text/javascript" src="js/tmpl.js"></script>
+<h2 style="display: inline-block;">Circuit breakers status</h2>
 
-    <!-- HystrixCommand -->
-    <script type="text/javascript" src="components/hystrixCommand/hystrixCommand.js"></script>
-    <link rel="stylesheet" type="text/css" href="components/hystrixCommand/hystrixCommand.css" />
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Commands
 
-    <!-- HystrixThreadPool -->
-    <script type="text/javascript" src="components/hystrixThreadPool/hystrixThreadPool.js"></script>
-    <link rel="stylesheet" type="text/css" href="components/hystrixThreadPool/hystrixThreadPool.css" />
+        <div class="pull-right btn-group" dropdown>
 
-<div class="container" style="margin-bottom: 20px;">
-    <div class="row">
-        <div class="span12">
-            <h2 style="display: inline-block;">Circuit breakers status</h2>
+            <button type="button" class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle>Sort <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByErrorThenVolume();">Error then Volume</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortAlphabetically();">Alphabetical</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByVolume();">Volume</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByError();">Error</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatencyMean();">Mean</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatencyMedian();">Median</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency90();">90</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency99();">99</a></li>
+                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency995();">99.5</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="row">
-        <div id="dependencies" class="row dependencies"><span class="loading">Loading ...</span></div>
-    </div>
-    <div class="row">
-        <div id="dependencyThreadPools" class="row dependencyThreadPools"><span class="loading">Loading ...</span></div>
-    </div>
-</div>
-                                                <!--
 
-<div class="container">
-    <div class="row">
-        <div class="menubar">
-            <div class="title">
-                Circuit
-            </div>
-            <div class="menu_actions">
-                Sort:
-                <a href="javascript://" onclick="hystrixMonitor.sortByErrorThenVolume();">Error then Volume</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortAlphabetically();">Alphabetical</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByVolume();">Volume</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByError();">Error</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByLatencyMean();">Mean</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByLatencyMedian();">Median</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByLatency90();">90</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByLatency99();">99</a> |
-                <a href="javascript://" onclick="hystrixMonitor.sortByLatency995();">99.5</a>
-            </div>
+        <div class="pull-right">
             <div class="menu_legend">
                 <span class="success">Success</span> | <span class="shortCircuited">Short-Circuited</span> | <span class="timeout">Timeout</span> | <span class="rejected">Rejected</span> | <span class="failure">Failure</span> | <span class="errorPercentage">Error %</span>
             </div>
         </div>
-    </div>
-    <div id="dependencies" class="row dependencies"><span class="loading">Loading ...</span></div>
 
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div class="menubar">
-            <div class="title">
-                Thread Pools
-            </div>
-            <div class="menu_actions">
-                Sort: <a href="javascript://" onclick="dependencyThreadPoolMonitor.sortAlphabetically();">Alphabetical</a> |
-                <a href="javascript://" onclick="dependencyThreadPoolMonitor.sortByVolume();">Volume</a> |
-            </div>
-        </div>
     </div>
-    <div id="dependencyThreadPools" class="row dependencyThreadPools"><span class="loading">Loading ...</span></div>
+    <div class="panel-body">
+        <div id="dependencies" class="row-centered dependencies"><span class="loading">Loading ...</span></div>
+    </div>
 </div>
 
-                                     -->
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Thread pools
 
-<script>
-    /**
-     * Queue up the monitor to start once the page has finished loading.
-     *
-     * This is an inline script and expects to execute once on page load.
-     */
-
-    // commands
-    var hystrixMonitor = new HystrixCommandMonitor('dependencies', {includeDetailIcon:false});
-
-    var stream = "/turbine.stream?delay=100000&batch=50";
-
-    console.log("Stream: " + stream)
-
-    if(stream != undefined) {
-        if(getUrlVars()["delay"] != undefined) {
-            stream = stream + "&delay=" + getUrlVars()["delay"];
-        }
-
-        var commandStream = stream;//"${contextPath}/proxy.stream?origin=" + stream;
-        var poolStream = stream;//"${contextPath}/proxy.stream?origin=" + stream;
-
-        if(getUrlVars()["title"] != undefined) {
-            $('#title_name').html("Hystrix Stream: " + decodeURIComponent(getUrlVars()["title"]))
-        } else {
-            $('#title_name').html("Hystrix Stream: " + decodeURIComponent(stream))
-        }
-    }
-    console.log("Command Stream: " + commandStream);
-
-    if(commandStream == undefined) {
-        console.log("commandStream is undefined")
-        $("#dependencies .loading").html("The 'stream' argument was not provided.");
-        $("#dependencies .loading").addClass("failed");
-    } else {
-        // sort by error+volume by default
-        hystrixMonitor.sortByErrorThenVolume();
-
-        // start the EventSource which will open a streaming connection to the server
-        var source = new EventSource(commandStream);
-
-        // add the listener that will process incoming events
-        source.addEventListener('message', hystrixMonitor.eventSourceMessageListener, false);
-
-        //	source.addEventListener('open', function(e) {
-        //		console.console.log(">>> opened connection, phase: " + e.eventPhase);
-        //	    // Connection was opened.
-        //	}, false);
-
-        source.addEventListener('error', function(e) {
-            if (e.eventPhase == EventSource.CLOSED) {
-                // Connection was closed.
-                console.log("Connection was closed on error: " + JSON.stringify(e));
-            } else {
-                console.log("Error occurred while streaming: " + JSON.stringify(e));
-            }
-        }, false);
-    }
-
-    // thread pool
-    var dependencyThreadPoolMonitor = new HystrixThreadPoolMonitor('dependencyThreadPools');
-
-    if(poolStream == undefined) {
-        console.log("poolStream is undefined")
-        $("#dependencyThreadPools .loading").html("The 'stream' argument was not provided.");
-        $("#dependencyThreadPools .loading").addClass("failed");
-    } else {
-        dependencyThreadPoolMonitor.sortByVolume();
-
-        // start the EventSource which will open a streaming connection to the server
-        var source = new EventSource(poolStream);
-
-        // add the listener that will process incoming events
-        source.addEventListener('message', dependencyThreadPoolMonitor.eventSourceMessageListener, false);
-
-        //	source.addEventListener('open', function(e) {
-        //		console.console.log(">>> opened connection, phase: " + e.eventPhase);
-        //	    // Connection was opened.
-        //	}, false);
-
-        source.addEventListener('error', function(e) {
-            if (e.eventPhase == EventSource.CLOSED) {
-                // Connection was closed.
-                console.log("Connection was closed on error: " + e);
-            } else {
-                console.log("Error occurred while streaming: " + e);
-            }
-        }, false);
-    }
-
-    //Read a page's GET URL variables and return them as an associative array.
-    // from: http://jquery-howto.blogspot.com/2009/09/get-url-parameters-values-with-jquery.html
-    function getUrlVars()
-    {
-        var vars = [], hash;
-        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-        for(var i = 0; i < hashes.length; i++)
-        {
-            hash = hashes[i].split('=');
-            vars.push(hash[0]);
-            vars[hash[0]] = hash[1];
-        }
-        return vars;
-    }
-
-</script>
+        <div class="pull-right btn-group" dropdown>
+            <button type="button" class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle>Sort <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="javascript://" onclick="dependencyThreadPoolMonitor.sortAlphabetically();">Alphabetical</a></li>
+                <li><a href="javascript://" onclick="dependencyThreadPoolMonitor.sortByVolume();">Volume</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="panel-body">
+        <div id="dependencyThreadPools" class="row-centered dependencyThreadPools"><span class="loading">Loading ...</span></div>
+    </div>
+</div>
