Finalize circuit breakers pages

--- a/src/main/webapp/public/views/apps.html
+++ b/src/main/webapp/public/views/apps.html
@@ -12,6 +12,7 @@
 			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.logging({id: instance.id})" >Logging</a></label>
 			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.jmx({id: instance.id})">JMX</a></label>
 			<a class="btn btn-default" ui-sref-active="active" ui-sref="apps.threads({id: instance.id})">Threads</a></label>
+			<a class="btn btn-default" ui-sref-active="active" ui-sref="circuit-breaker({type: 'instance', id: instance.id})">Circuit breakers</a></label>
 		</div>
 	</div>
 </div>
