--- a/src/main/webapp/public/views/circuit-breaker/index.html
+++ b/src/main/webapp/public/views/circuit-breaker/index.html
@@ -6,7 +6,10 @@
 <script type="text/javascript" src="js/circuit-breaker-command.js"></script>
 <script type="text/javascript" src="js/circuit-breaker-threadpool.js"></script>
 
-<h2 style="display: inline-block;">Circuit breakers status</h2>
+<h2 style="display: inline-block;">
+    Circuit breakers status
+    <small>{{ subtitle }}</small>
+</h2>
 
 <div class="panel panel-default">
     <div class="panel-heading">
