Fix refresh auto overview

--- a/src/main/webapp/public/views/overview.html
+++ b/src/main/webapp/public/views/overview.html
@@ -1,12 +1,12 @@
 <h2 >Spring Cloud Dashboard<br>
-<small>Here you'll find all Spring Cloud applications that registered on the registry.</small>
+    <small>Here you'll find all Spring Cloud applications that registered on the registry.</small>
 </h2>
 
 <div class="row">
     <div class="col-md-4">
 
-        <tabset class="tabs-inverse" vertical="true" type="pills" ng-init="visible = []">
-            <tab select="selectApp($index)" ng-repeat="application in applications track by application.name" select="visible[application.name] =  true" deselect="visible[application.name] = false">
+        <tabset class="tabs-inverse" vertical="true" type="pills">
+            <tab ui-sref="overview.select({id: application.name})" ng-repeat="application in applications track by application.name" active="application.active">
                 <tab-heading>
                     <strong>{{application.name}}</strong>
                     <div class="pull-right">
@@ -17,45 +17,9 @@
         </tabset>
 
     </div>
-    <div class="col-md-8">
 
-        <span class="h3 pull-left" style="margin-bottom: 0px;margin-top: 8px;">{{app.name}}</span>
-
-        <div class="pull-right">
-            <a class="btn btn-sm btn-success" ui-sref="circuit-breaker({type: 'app', id: app.name})">Circuit breakers</a>
-        </div>
-
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Instance</th>
-                <th>Version</th>
-                <th>Info</th>
-                <th>Status</th>
-                <th colspan="2">Health</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="instance in app.instances track by instance.id">
-                <td>{{ instance.name }}<br/><span class="muted">{{ instance.url }}</span></td>
-                <td>{{ instance.version }}</td>
-                <td><span ng-repeat="(name, value) in instance.info track by name">{{name}}: {{value}}<br></span></td>
-                <td><span class="status-{{instance.status}}">{{ instance.status }}</span>
-                    <span ng-show="instance.refreshing" class="refresh"></span></td>
-                <td><span class="status-{{instance.health}}">{{ instance.health }}</span></td>
-                <td>
-                    <div class="btn-group pull-right" ng-hide="instance.status == null || instance.status == 'DOWN' || instance.status == 'OUT_OF_SERVICE' || instance.health == 'OFFLINE'">
-                        <a ui-sref="apps.details.metrics({id: instance.id})" class="btn btn-success">Details</a>
-                        <!--
-                        <a ui-sref="apps.logging({id: instance.id})" class="btn btn-success">Logging</a>
-                        <a ui-sref="apps.jmx({id: instance.id})" class="btn btn-success">JMX</a>
-                        <a ui-sref="apps.threads({id: instance.id})" class="btn btn-success">Threads</a>
-                        -->
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div ui-view>
 
     </div>
+
 </div>
