--- a/src/main/webapp/public/views/apps/details/metrics.html
+++ b/src/main/webapp/public/views/apps/details/metrics.html
@@ -2,6 +2,7 @@
 	<thead>
 		<tr>
 			<th>Counters</th>
+			<th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th>
 		</tr>
 	</thead>
 	<tbody>
@@ -25,6 +26,7 @@
 	<thead>
 		<tr>
 			<th>Gauges</th>
+			<th><small class="pull-right"><a href="api/instance/{{ instance.id }}/metrics">raw JSON</a></small></th>
 		</tr>
 	</thead>
 	<tbody>    	
