Add circuit breaker activation check

--- a/src/main/webapp/public/views/circuit-breaker/index.html
+++ b/src/main/webapp/public/views/circuit-breaker/index.html
@@ -19,15 +19,15 @@
 
             <button type="button" class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle>Sort <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByErrorThenVolume();">Error then Volume</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortAlphabetically();">Alphabetical</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByVolume();">Volume</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByError();">Error</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatencyMean();">Mean</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatencyMedian();">Median</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency90();">90</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency99();">99</a></li>
-                <li><a href="javascript://" onclick="hystrixMonitor.sortByLatency995();">99.5</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByErrorThenVolume();">Error then Volume</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortAlphabetically();">Alphabetical</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByVolume();">Volume</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByError();">Error</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByLatencyMean();">Mean</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByLatencyMedian();">Median</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByLatency90();">90</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByLatency99();">99</a></li>
+                <li><a href="" ng-click="hystrixMonitor.sortByLatency995();">99.5</a></li>
             </ul>
         </div>
 
@@ -50,8 +50,8 @@
         <div class="pull-right btn-group" dropdown>
             <button type="button" class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle>Sort <span class="caret"></span></button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="javascript://" onclick="dependencyThreadPoolMonitor.sortAlphabetically();">Alphabetical</a></li>
-                <li><a href="javascript://" onclick="dependencyThreadPoolMonitor.sortByVolume();">Volume</a></li>
+                <li><a href="" ng-click="dependencyThreadPoolMonitor.sortAlphabetically();">Alphabetical</a></li>
+                <li><a href="" ng-click="dependencyThreadPoolMonitor.sortByVolume();">Volume</a></li>
             </ul>
         </div>
     </div>
